# sahayak-ai

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  demo.html  pyproject.toml  requirements.txt
.github/workflows/: cd-prod.yml  ci.yml
docs/api/: openapi.yaml
docs/architecture/: README.md  dpdp-compliance.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: ChatInterface.js  Header.js  LanguageSelector.js  Message.js  TextInput.js  VoiceInput.js
frontend/src/contexts/: LanguageContext.js
frontend/src/hooks/: useSpeechSynthesis.js
frontend/src/styles/: ChatInterface.css  Header.css  LanguageSelector.css  Message.css  TextInput.css  VoiceInput.css
frontend/src/utils/: ApiService.js
infrastructure/terraform/environments/dev/: main.tf  terraform.tfvars  variables.tf
infrastructure/terraform/environments/prod/: main.tf  terraform.tfvars
infrastructure/terraform/modules/messaging/: main.tf
infrastructure/terraform/modules/networking/: main.tf
infrastructure/terraform/modules/observability/: main.tf
infrastructure/terraform/modules/security/: main.tf
infrastructure/terraform/modules/storage/: main.tf
scripts/: seed_schemes.py  smoke_test.py
services/conversation-orchestrator/: requirements-dev.txt
services/conversation-orchestrator/src/bedrock/: bedrock_client.py  prompt_templates.py
services/conversation-orchestrator/src/handlers/: conversation_handler.py
services/conversation-orchestrator/src/models/: conversation_models.py
services/conversation-orchestrator/src/orchestration/: context_manager.py  intent_classifier.py
services/conversation-orchestrator/tests/: test_intent_classifier.py
services/eligibility-engine/: requirements-dev.txt  requirements.txt
services/eligibility-engine/src/evaluators/: eligibility_evaluator.py
services/eligibility-engine/tests/: test_rule_engine.py
services/scheme-management-service/: requirements-dev.txt  requirements.txt
services/scheme-retrieval-service/: requirements-dev.txt  requirements.txt
services/user-profile-service/: requirements-dev.txt  requirements.txt
services/voice-service/: requirements-dev.txt
services/voice-service/src/: __init__.py
services/voice-service/tests/: test_language_detector.py
shared/schemas/api/: openapi.yaml
tests/: test_eligibility_engine.py  test_scheme_management.py  test_voice_service.py
(+19 files in other folders)
